Thu Dec  5 13:47:15 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (vm_malloc_size): added.
	  return malloc_usable_size() if possible.

	* gc.c (MALLOC_ALLOCATED_SIZE): add new setting macro to enable
	  GC.allocated_size.
	  If platform supports `malloc_usable_size()' (or similar one),
	  GC.allocated_size can be implemented with this function.
	  Default is 0.

	* gc.c (vm_xmalloc, vm_xrealloc, vm_xfree): use vm_malloc_size()
	  to detect collect allocated size.

	* gc.c (vm_malloc_increase): refactoring.

Thu Dec  5 13:19:03 2013  Aman Gupta <ruby@tmm1.net>

	* include/ruby/ruby.h: remove INTERNAL_EVENT_GC_END and replace with
	  two new events: GC_END_MARK and GC_END_SWEEP
	* gc.c (gc_after_sweep): emit GC_END_SWEEP after lazy sweep is done
	* gc.c (gc_marks_body): emit GC_END_MARK at end of minor/major mark
	* ext/-test-/tracepoint/tracepoint.c (struct tracepoint_track): tests
	  for new events.
	* test/-ext-/tracepoint/test_tracepoint.rb (class TestTracepointObj):
	  ditto.
	* NEWS: remove ObjectSpace.after_gc_*_hook. These are only a sample,
	  and will be removed before ruby 2.1.
	* ext/objspace/gc_hook.c: remove ObjectSpace.after_gc_end_hook=

Thu Dec  5 10:47:56 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby_atomic.h (ATOMIC_PTR_EXCHANGE): atomic exchange function for
	  a generic pointer.

Thu Dec  5 10:47:09 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (finalize_deferred): flush all deferred finalizers while other
	  finalizers can get ready to run newly by lazy sweep.
	  [ruby-core:58833] [Bug #9205]

Thu Dec  5 09:07:59 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c (ruby_gc_set_params): Accept safe_level argument so GC tuning
	  settings can be applied before rb_safe_level() is available.
	* internal.h (rb_gc_set_params): ditto.
	* ruby.c (process_options): Apply GC tuning early during boot process
	  so boot-time allocations can benefit. This also benefits any code
	  loaded in via `ruby -r`.
